[package]
name = "serde_regex"
description = """
    A serde wrapper that (de)serializes regex as strings
"""
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["serde", "regex"]
categories = ["encoding"]
homepage = "https://github.com/tailhook/serde-regex"
documentation = "https://docs.rs/serde_regex"
version = "1.1.0"
authors = ["paul@colomiets.name"]
edition = "2018"

[dependencies]
serde = "1.0.0"
regex = "1.0.0"

[dev-dependencies]
serde_derive = "1.0.0"
serde_json = "1.0.39"
